# Beauty-Agent

./: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml  terminal_chatbot.py
notebooks/: agent-evals-judge.ipynb  agent-evals.ipynb  agent.ipynb  agent_v2.ipynb  agent_v3.ipynb  data-ingestion_elastic_search_v3.ipynb  youtube-data-extraction.ipynb
service/agent/: README.md  pyproject.toml
service/agent/src/agent/: clarify_agent.py  orchestrator_agent.py  youtube_agent.py
service/evals/: README.md  pyproject.toml
service/evals/src/evals/: __init__.py  create_eval_agent.py  create_ground_truth.py  run_eval_agent.py  utils.py
service/product_extraction/: pyproject.toml
service/product_extraction/src/product_extraction/: __init__.py  sephora_search_tool.py
service/youtube_extraction/: README.md  pyproject.toml
service/youtube_extraction/src/youtube_extraction/: __init__.py  search_tool.py  transcripts.py  utils.py  youtube_parser.py  youtube_process.py  youtube_search.py
