[project]
name = "product-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Calvin Chen", email = "calvinchen0123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "minsearch>=0.0.7",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
