[project]
name = "youtube-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Calvin Chen", email = "calvinchen0123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "deep-translator>=1.11.4",
    "minsearch>=0.0.7",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.2.3",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
